added atlas to localStorage, made title change on bigger screen

--- a/categories.html
+++ b/categories.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Categories</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,27 +28,43 @@
       <nav>
         <ul>
           <a href="#">
-            <img class="navigation" src="images/Homee.png" alt="" />
+            <img class="navigation" src="images/Homee.png" alt="house icon" />
           </a>
           <a href="#">
-            <img class="navigation-spy" src="images/spyy.png" alt="" />
+            <img
+              class="navigation-spy"
+              src="images/spyy.png"
+              alt="spyglass icon"
+            />
           </a>
           <a href="#">
-            <img class="navigation-login" src="images/Accountt.png" alt="" />
+            <img
+              class="navigation-login"
+              src="images/Accountt.png"
+              alt="account icon"
+            />
           </a>
           <a href="shopping-cart.html">
-            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
+            <img
+              id="navigation-shopping"
+              src="images/shoppingg.png"
+              alt="shopping cart icon"
+            />
           </a>
         </ul>
       </nav>
     </header>
     <main>
       <figure class="book-header-fig">
-        <img class="book-header" src="books/header.jpg" alt="" />
+        <img
+          class="book-header"
+          src="books/header.jpg"
+          alt="advertisement for new book release"
+        />
       </figure>
       <h1 id="cat-title">Categories</h1>
       <figure class="line-fig">
-        <img class="line" src="images/line.png" alt="" />
+        <img class="line" src="images/line.png" alt="line" />
       </figure>
       <section class="container-categories">
         <a class="categories" href="products.html" id="fantasy">
