--- a/index.html
+++ b/index.html
@@ -29,16 +29,28 @@
       <nav>
         <ul>
           <a href="categories.html">
-            <img class="navigation" src="images/Homee.png" alt="" />
+            <img class="navigation" src="images/Homee.png" alt="house icon" />
           </a>
           <a href="#">
-            <img class="navigation-spy" src="images/spyy.png" alt="" />
+            <img
+              class="navigation-spy"
+              src="images/spyy.png"
+              alt="spyglass icon"
+            />
           </a>
           <a href="#">
-            <img class="navigation-login" src="images/Accountt.png" alt="" />
+            <img
+              class="navigation-login"
+              src="images/Accountt.png"
+              alt="account icon"
+            />
           </a>
           <a href="shopping-cart.html">
-            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
+            <img
+              id="navigation-shopping"
+              src="images/shoppingg.png"
+              alt="shopping cart icon"
+            />
           </a>
         </ul>
       </nav>
