--- a/product-detail.html
+++ b/product-detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Dune</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,16 +29,28 @@
       <nav>
         <ul>
           <a href="categories.html">
-            <img class="navigation" src="images/Homee.png" alt="" />
+            <img class="navigation" src="images/Homee.png" alt="house icon" />
           </a>
           <a href="#">
-            <img class="navigation-spy" src="images/spyy.png" alt="" />
+            <img
+              class="navigation-spy"
+              src="images/spyy.png"
+              alt="spyglass icon"
+            />
           </a>
           <a href="#">
-            <img class="navigation-login" src="images/Accountt.png" alt="" />
+            <img
+              class="navigation-login"
+              src="images/Accountt.png"
+              alt="account icon"
+            />
           </a>
           <a href="shopping-cart.html">
-            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
+            <img
+              id="navigation-shopping"
+              src="images/shoppingg.png"
+              alt="shopping cart icon"
+            />
           </a>
         </ul>
       </nav>
@@ -47,7 +59,7 @@
     <main class="container-detail">
       <section class="dune-left">
         <figure class="dune-detail">
-          <img class="image-dune" src="books/dune.jpg" alt="dune-book-cover" />
+          <img class="image-dune" src="books/dune.jpg" alt="dune book cover" />
         </figure>
       </section>
 
