--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Name</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,16 +29,28 @@
       <nav>
         <ul>
           <a href="categories.html">
-            <img class="navigation" src="images/Homee.png" alt="" />
+            <img class="navigation" src="images/Homee.png" alt="house icon" />
           </a>
           <a href="#">
-            <img class="navigation-spy" src="images/spyy.png" alt="" />
+            <img
+              class="navigation-spy"
+              src="images/spyy.png"
+              alt="spyglass icon"
+            />
           </a>
           <a href="#">
-            <img class="navigation-login" src="images/Accountt.png" alt="" />
+            <img
+              class="navigation-login"
+              src="images/Accountt.png"
+              alt="account icon"
+            />
           </a>
           <a href="shopping-cart.html">
-            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
+            <img
+              id="navigation-shopping"
+              src="images/shoppingg.png"
+              alt="shopping cart icon"
+            />
           </a>
         </ul>
       </nav>
@@ -48,38 +60,94 @@
       <section class="cart-page">
         <section id="dune-display">
           <figure class="cart-book">
-            <img class="book-buying" src="books/dune.jpg" alt="" />
+            <img
+              class="book-buying"
+              src="books/dune.jpg"
+              alt="dune book cover"
+            />
           </figure>
           <section>
             <p class="cart-title">Dune</p>
             <p class="cart-author">Frank Herbert</p>
             <section class="add-delete">
               <button class="minus" id="dune-delete-cart">
-                <img class="minus-img" src="images/minus.png" alt="" />
+                <img
+                  class="minus-img"
+                  src="images/minus.png"
+                  alt="minus sign"
+                />
               </button>
               <p class="number" id="dune-counter">1</p>
               <button class="plus-cart" id="dune-add-cart">
-                <img class="plus-cart-img" src="books/32339.png" alt="" />
+                <img
+                  class="plus-cart-img"
+                  src="books/32339.png"
+                  alt="plus sign"
+                />
               </button>
             </section>
             <p class="cart-price" id="dune-price">130 kr</p>
           </section>
         </section>
 
+        <section id="atlas-display">
+          <figure class="cart-book">
+            <img
+              class="book-buying"
+              src="books/atlas-six.jpg"
+              alt="the atlas six book cover"
+            />
+          </figure>
+          <section>
+            <p class="cart-title">The Atlas Six</p>
+            <p class="cart-author">Olivie Blake</p>
+            <section class="add-delete">
+              <button class="minus" id="atlas-delete-cart">
+                <img
+                  class="minus-img"
+                  src="images/minus.png"
+                  alt="minus sign"
+                />
+              </button>
+              <p class="number" id="atlas-counter">1</p>
+              <button class="plus-cart" id="atlas-add-cart">
+                <img
+                  class="plus-cart-img"
+                  src="books/32339.png"
+                  alt="plus sign"
+                />
+              </button>
+            </section>
+            <p class="cart-price" id="atlas-price">130 kr</p>
+          </section>
+        </section>
+
         <section id="babel-display">
           <figure class="cart-book">
-            <img class="book-buying" src="books/babel.jpg" alt="" />
+            <img
+              class="book-buying"
+              src="books/babel.jpg"
+              alt="babel book cover"
+            />
           </figure>
           <section>
             <p class="cart-title">Babel</p>
             <p class="cart-author">R.F Kuang</p>
             <section class="add-delete">
               <button class="minus" id="babel-delete-cart">
-                <img class="minus-img" src="images/minus.png" alt="" />
+                <img
+                  class="minus-img"
+                  src="images/minus.png"
+                  alt="minus sign"
+                />
               </button>
               <p class="number" id="babel-counter">1</p>
               <button class="plus-cart" id="babel-add-cart">
-                <img class="plus-cart-img" src="books/32339.png" alt="" />
+                <img
+                  class="plus-cart-img"
+                  src="books/32339.png"
+                  alt="plus sign"
+                />
               </button>
             </section>
             <p class="cart-price" id="babel-price">130 kr</p>
