changed code in html products + minor changes

--- a/products.html
+++ b/products.html
@@ -56,9 +56,8 @@
       </nav>
     </header>
     <main>
+      <h1 class="fantasy-title">Fantasy</h1>
       <section class="container-products">
-        <!-- the three first sections are coded differently to be able to click button, and access next page -->
-
         <section class="products">
           <a class="book-link" href="product-detail.html">
             <figure class="book-fig">
@@ -87,7 +86,7 @@
               />
               <figcaption>
                 <p class="book-title">The Atlas Six</p>
-                <p>Olivia Blake</p>
+                <p>Olivie Blake</p>
               </figcaption>
             </figure>
           </a>
@@ -117,185 +116,203 @@
           </section>
         </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/graceling.jpg"
-              alt="graceling book cover"
-            />
-            <figcaption>
-              <p class="book-title">Graceling</p>
-              <p>Kristin Cashore</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/graceling.jpg"
+                alt="graceling book cover"
+              />
+              <figcaption>
+                <p class="book-title">Graceling</p>
+                <p>Kristin Cashore</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/dark-mirror.jpg"
-              alt="the dark mirror book cover"
-            />
-            <figcaption>
-              <p class="book-title" id="mirror">The Dark Mir..</p>
-              <p>Samantha Shannon</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/dark-mirror.jpg"
+                alt="the dark mirror book cover"
+              />
+              <figcaption>
+                <p class="book-title" id="mirror">The Dark Mir..</p>
+                <p>Samantha Shannon</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/hurricane-wars.jpg"
-              alt="the hurricane wars book cover"
-            />
-            <figcaption>
-              <p class="book-title" id="hurricane">The Hurricane..</p>
-              <p>Thea Guanzon</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/hurricane-wars.jpg"
+                alt="the hurricane wars book cover"
+              />
+              <figcaption>
+                <p class="book-title" id="hurricane">The Hurricane..</p>
+                <p>Thea Guanzon</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/orange-tree.jpg"
-              alt="the priory of the orange tree book cover"
-            />
-            <figcaption>
-              <p class="book-title" id="priory">The Priory of..</p>
-              <p>Samantha Shannon</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/orange-tree.jpg"
+                alt="the priory of the orange tree book cover"
+              />
+              <figcaption>
+                <p class="book-title" id="priory">The Priory of..</p>
+                <p>Samantha Shannon</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/poppy-war.jpg"
-              alt="the poppy war book cover"
-            />
-            <figcaption>
-              <p class="book-title">The Poppy War</p>
-              <p>R.F Kuang</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/poppy-war.jpg"
+                alt="the poppy war book cover"
+              />
+              <figcaption>
+                <p class="book-title">The Poppy War</p>
+                <p>R.F Kuang</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/piransei.jpg"
-              alt="piranesi book cover"
-            />
-            <figcaption>
-              <p class="book-title">Piranesi</p>
-              <p>Susanne Clarke</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/piransei.jpg"
+                alt="piranesi book cover"
+              />
+              <figcaption>
+                <p class="book-title">Piranesi</p>
+                <p>Susanne Clarke</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/under-the-whispering-door.jpg"
-              alt="under the whispering door book cover"
-            />
-            <figcaption>
-              <p class="book-title" id="whisp">Under the Wh..</p>
-              <p>TJ Klune</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/under-the-whispering-door.jpg"
+                alt="under the whispering door book cover"
+              />
+              <figcaption>
+                <p class="book-title" id="whisp">Under the Wh..</p>
+                <p>TJ Klune</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/spellslinger.jpg"
-              alt="spellslinger book cover"
-            />
-            <figcaption>
-              <p class="book-title">Spellslinger</p>
-              <p>Sebastien De Castell</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/spellslinger.jpg"
+                alt="spellslinger book cover"
+              />
+              <figcaption>
+                <p class="book-title">Spellslinger</p>
+                <p>Sebastien De Castell</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
 
-        <a class="products" href="#">
-          <figure class="book-fig">
-            <img
-              class="book"
-              src="books/the-cruel-prince.jpg"
-              alt="the cruel prince book cover"
-            />
-            <figcaption>
-              <p class="book-title" id="prince">The Cruel Prin..</p>
-              <p>Holly Black</p>
-            </figcaption>
-          </figure>
+        <section class="products">
+          <a class="book-link" href="#">
+            <figure class="book-fig">
+              <img
+                class="book"
+                src="books/the-cruel-prince.jpg"
+                alt="the cruel prince book cover"
+              />
+              <figcaption>
+                <p class="book-title" id="prince">The Cruel Prin..</p>
+                <p>Holly Black</p>
+              </figcaption>
+            </figure>
+          </a>
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
               <img class="plus" src="books/32339.png" alt="plus sign" />
             </button>
           </section>
-        </a>
+        </section>
       </section>
     </main>
     <footer>
